# Interpretable-Anomaly-Detection

./: .gitignore  README.md  constraints.py  distance_functions.py  fit_dfa.py  fit_dfa_wrapers.py  learn_dfa.py  main.py  objective_functions.py  pyproject.toml  requirements.txt  requirements.txt.txt  sample.txt  setup_dfa.py  test.py  train_and_evaluate.py  utility.py
Alfred/: test_100.txt  test_101.txt  test_102.txt  test_103.txt  test_106.txt  train_101.txt  train_102.txt  train_104.txt  train_106.txt
data/: data_converter.py  openstack.py
data/Alfred/: alfred_full.txt  test_104.txt  test_105.txt  train_100.txt  train_101.txt  train_102.txt  train_103.txt  train_104.txt  train_105.txt  train_106.txt
data/samples/: 3spikes.txt  (+4 more)
deprecated/: constraints.py  fit_dfa.py  fit_dfa_wrapers.py  main.py  objective_functions.py  setup_dfa.py  train_and_evaluate.py  utility.py
experiments/: alfred_bounds_experiment.py  alfred_distance_experiment.py  alfred_experiment.py  bgl_bounds.py  bgl_bounds_experiment.py  bgl_distance_experiment.py  bgl_distances.py  bgl_experiment.py  data_loader.py  hdfs_bounds_experiment.py  hdfs_distance_experiment.py  hfds1.py  hfds1_bounds.py  hfds1_distances.py  hfds_bounds_experiment.py  hfds_experiment.py  new_alfred_experiment.py  openstack_bounds_experiment.py  openstack_distance_experiment.py  plotting.py
samples/: generate_numeric_data.py  numeric_sample.txt  sample.txt  sample4.txt  test.txt  test_sample.txt
src/: test.py
tests/: test_dfa_with_bounds.py  test_dfa_with_distances.py  test_dfa_with_labels.py  test_minimal_dfa.py
(+275 files in other folders)
